<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            tools:context="com.example.dell.rescue.MapsActivity" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/XmlSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:text="@string/signout" />

            <Button
                android:id="@+id/XmlLocateMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/XmlSignOut"
                android:layout_marginStart="129dp"
                android:text="@string/locateme" />

            <Button
                android:id="@+id/XmlHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/XmlThread"
                android:layout_width="wrap_content"
                android:layout_below="@+id/XmlHelp"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textSize="25sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/XmlSignOut"
                android:text="@string/emerg"
                android:layout_marginStart="135dp"
                android:id="@+id/Emerg"/>

        </RelativeLayout>

    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:itemTextColor="@color/darkgray"
        app:itemIconTint="@color/darkgray"
        app:menu="@menu/mymenu"
        android:layout_gravity="start">




    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>