<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:id="@+id/MAP"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/MapLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:context=".MapsActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">
            <Button
                android:id="@+id/XmlLocateMe"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/locateme" />

            <Button
                android:id="@+id/XmlHelp"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emerg"
                android:layout_weight="2"
                android:visibility="gone"
                android:id="@+id/Emerg"/>

            <TextView
                android:id="@+id/XmlThread"
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:textSize="25sp" />



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SignInButtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">



        <com.google.android.gms.common.SignInButton
            android:visibility="gone"
            android:id="@+id/GoogleSignIn"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/header"
        android:background="#2F4859"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:itemTextColor="#FFFFFF"
        app:itemIconTint="#FFFFFF"
        android:id="@+id/navigation_view"
        app:menu="@menu/mymenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>